# Graphyne

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.sh  run_tests.bat  run_tests.sh  vcpkg.json
.github/workflows/: ci.yml  format.yml  test.yml
cmake/: GraphyneDependencies.cmake  GraphyneUtils.cmake  graphyne-config.cmake.in
examples/: CMakeLists.txt  simple_window.cpp
project/include/core/: engine.h
project/include/graphics/: renderer.h  vulkan_renderer.h
project/include/graphyne/controls/: input_system.hpp
project/include/graphyne/core/: engine.hpp  event_system.hpp  memory.hpp  vulkan_resource_manager.hpp
project/include/graphyne/core/ecs/: ecs.hpp
project/include/graphyne/events/: event_system.hpp
project/include/graphyne/graphics/: renderer.hpp  vulkan_renderer.h  vulkan_renderer.hpp
project/include/graphyne/platform/: window.hpp
project/include/graphyne/utils/: logger.hpp
project/include/platform/: window.h
project/src/controls/: input_system.cpp
project/src/core/: engine.cpp  event_system.cpp  memory.cpp  vulkan_resource_manager.cpp
project/src/core/ecs/: ecs.cpp
project/src/events/: event_system.cpp
project/src/graphics/: renderer.cpp  vulkan_renderer.cpp
project/src/platform/: window.cpp
project/src/utils/: logger.cpp
tests/: CMakeLists.txt  main.cpp
tests/core/: engine_test.cpp
